fixed visibility issue on time log

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -948,3 +948,7 @@ i.fa.fa-times-circle {
 .time-log-month-total-2 {
   color: orangered;
 }
+
+.tab-content {
+  display: none;
+}
